# sky-detector

./: CMakeLists.txt  README.md  main_test.cpp
base/: class_register.h
file_processor/: file_system_processor.cpp  file_system_processor.h
sky_detector/: imageSkyDetector.cpp  imageSkyDetector.h
